<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShoeList.ShoeFragment"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:text="@string/shoe_name_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_size"
                android:textColor="@android:color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@android:color/black"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:id="@+id/shoe_name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_name_label"
                android:textColor="@color/colorButtonLogin"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/company_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textColor="@color/colorButtonLogin"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/shoe_size_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shoe_size"
                android:textColor="@color/colorButtonLogin"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/description_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/colorButtonLogin"
                android:textSize="20sp" />


        </LinearLayout>



    </LinearLayout>
</layout>