<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".InstructionFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <TextView
            android:id="@+id/welcome_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/instructions"
            android:textColor="@android:color/black"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_imageView"
            tools:text="@string/instructions" />

        <ImageView
            android:id="@+id/welcome_imageView"
            android:layout_width="222dp"
            android:layout_height="167dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@drawable/ic_baseline_help_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="40dp"
            android:backgroundTint="@color/colorButtonLogin"
            android:text="@string/next_txt"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_msg_textView" />

        <TextView
            android:id="@+id/welcome_msg_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingStart="50sp"
            android:paddingEnd="50sp"
            android:text="@string/instruction_text1"
            android:textColor="@color/colorButtonLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_textView" />

        <TextView
            android:id="@+id/welcome_msg2_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:paddingStart="50sp"
            android:paddingEnd="50sp"
            android:text="@string/instruction_text2"
            android:textColor="@color/colorButtonLogin"
            app:layout_constraintBottom_toTopOf="@+id/next_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_msg_textView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>