<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <data>
        <variable
            name="User"
            type="com.udacity.shoestore.models.User" />

    </data>

    <ScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constrain_layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <EditText
                android:id="@+id/email_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:drawableStart="@drawable/ic_baseline_email"
                android:ems="10"
                android:text="@={User.email}"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/password_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="56dp"
                android:layout_marginRight="40dp"
                android:drawableStart="@drawable/ic_baseline_lock"
                android:ems="10"
                android:text="@={User.password}"
                android:hint="@string/password_txt"
                android:inputType="textPassword"
                android:textColor="@android:color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_text_view"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="40dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/login_btn"
                android:backgroundTint="@color/colorButtonLogin"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_textview"
                app:layout_constraintVertical_bias="0.139" />

            <TextView
                android:id="@+id/email_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/email_txt"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/email_text_view"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/password_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/password_txt"
                android:textColor="@android:color/black"
                app:layout_constraintBottom_toTopOf="@+id/password_textview"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/login_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa"
                android:text="@string/login_btn"
                android:textColor="@android:color/black"
                android:textSize="35sp"
                app:layout_constraintBottom_toTopOf="@+id/email_txt"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.508" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>